# cvdrone

./: .gitignore  CMakeLists.txt  README.md
samples/: sample_camera_calibration.cpp
src/: main.cpp
src/ardrone/: uvlc.h
